moved to using git submodules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,19 +10,19 @@ file (GLOB_RECURSE sts_lightspeed_SOURCES CONFIGURE_DEPENDS "src/*.cpp")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS  "-Wno-shift-count-overflow")
 
-add_subdirectory(nlohmann_json)
+add_subdirectory(json)
 
 add_executable(main apps/main.cpp ${sts_lightspeed_SOURCES})
-target_link_directories(main PRIVATE nlohmann_json::nlohmann_json)
+target_link_directories(main PRIVATE json::nlohmann_json)
 target_include_directories(main PUBLIC include)
-target_include_directories(main PUBLIC nlohmann_json/include)
+target_include_directories(main PUBLIC json/include)
 
 add_executable(test apps/test.cpp ${sts_lightspeed_SOURCES})
-target_link_directories(main PRIVATE nlohmann_json::nlohmann_json)
+target_link_directories(main PRIVATE json::nlohmann_json)
 target_include_directories(test PUBLIC include)
-target_include_directories(test PUBLIC nlohmann_json/include)
+target_include_directories(test PUBLIC json/include)
 
 add_executable(small-test apps/small-test.cpp ${sts_lightspeed_SOURCES})
-target_link_directories(small-test PRIVATE nlohmann_json::nlohmann_json)
+target_link_directories(small-test PRIVATE json::nlohmann_json)
 target_include_directories(small-test PUBLIC include)
-target_include_directories(small-test PUBLIC nlohmann_json/include)
+target_include_directories(small-test PUBLIC json/include)
