--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,11 @@ set(CMAKE_CXX_FLAGS  "-Wno-shift-count-overflow -O3")
 add_subdirectory(json)
 add_subdirectory(pybind11)
 
-pybind11_add_module(slaythespire bindings/slaythespire.cpp ${sts_lightspeed_SOURCES})
+pybind11_add_module(slaythespire bindings/slaythespire.cpp bindings/bindings-util.cpp ${sts_lightspeed_SOURCES})
 target_include_directories(slaythespire PUBLIC include)
 target_include_directories(slaythespire PUBLIC json/single_include)
+target_include_directories(slaythespire PUBLIC bindings)
+
 
 add_executable(main apps/main.cpp ${sts_lightspeed_SOURCES})
 target_link_directories(main PRIVATE json::nlohmann_json)
@@ -27,8 +29,8 @@ target_include_directories(test PUBLIC include)
 target_link_directories(test PUBLIC json::nlohmann_json)
 target_include_directories(test PUBLIC json/include)
 
-add_executable(small-test apps/small-test.cpp ${sts_lightspeed_SOURCES})
+add_executable(small-test apps/small-test.cpp bindings/bindings-util.cpp ${sts_lightspeed_SOURCES})
 target_link_directories(small-test PRIVATE json::nlohmann_json)
 target_include_directories(small-test PUBLIC include)
 target_include_directories(small-test PUBLIC json/include)
-
+target_include_directories(small-test PUBLIC bindings)
