cleanup before PR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,10 @@ target_link_directories(main PRIVATE json::nlohmann_json)
 target_include_directories(main PUBLIC include)
 target_include_directories(main PUBLIC json/include)
 
-add_executable(main2 apps/main2.cpp ${sts_lightspeed_SOURCES})
-target_link_directories(main2 PRIVATE json::nlohmann_json)
-target_include_directories(main2 PUBLIC include)
-target_include_directories(main2 PUBLIC json/include)
+add_executable(battle-sim apps/battle-sim.cpp ${sts_lightspeed_SOURCES})
+target_link_directories(battle-sim PRIVATE json::nlohmann_json)
+target_include_directories(battle-sim PUBLIC include)
+target_include_directories(battle-sim PUBLIC json/include)
 
 add_executable(test apps/test.cpp ${sts_lightspeed_SOURCES})
 target_include_directories(test PUBLIC include)
